syntax="proto3";

option go_package = "github.com/ujjwal-shekhar/common/mapreduce";
import "google/protobuf/empty.proto";

service FileTransfer {
    rpc FileUpload(FileChunk) returns (google.protobuf.Empty) {}
    rpc SendKV(KVPair) returns (google.protobuf.Empty) {}
}

message FileChunk {
    bytes chunk = 1;
    int32 chunkNumber = 2;
    string fileName = 3;
}

message KVPair {
    string key = 1;
    string value = 2;
}